--- a/Index.html
+++ b/Index.html
@@ -211,7 +211,7 @@
         <div class = "conference-wrapper">
           <img src = "Assets/Conference-img.jpg" >
           <div class = "conference-text">
-            <h1> <a name = "Conference-img"> Conference </a> <span> Rooms </span>  </h1>
+            <h1> <a name = "Conference"> Conference </a> <span> Rooms </span>  </h1>
             <h5> Welcome to your second home  </h5>
             <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pharetra nibh eu ultrices ultrices. Phasellus pulvinar consequat elit eget accumsan. Phasellus tempor nec sem ac blandit. Proin iaculis dui pellentesque ornare efficitur. Nulla aliquet commodo imperdiet. Suspendisse a ullamcorper nisi. Vivamus quis justo eleifend, porttitor est eu, porttitor eros. Aenean quis felis vel libero tempus venenatis nec sed tortor. Etiam pulvinar risus et felis dapibus tempus. Mauris at vulputate lorem. Praesent consectetur quam magna, ultrices blandit lectus tincidunt ut.
